--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     
     <!-- <script src="./js/script.js"></script> -->
-    <!-- <script src="./js/01-vars.js" type="module"></script> -->
-    <!-- <script src="./js/02-input.js" type="module"></script> -->
-    <!-- <script src="./js/03-numbers.js" type="module"></script> -->
-    <!-- <script src="./js/04-strings.js" type="module"></script> -->
-    <!-- <script src="./js/05-logic.js" type="module"></script> -->
-    <!-- <script src="./js/06-branching.js" type="module"></script> -->
+    <script src="./js/01-vars.js" type="module"></script>
+    <script src="./js/02-input.js" type="module"></script> 
+    <!-- <script src="./js/03-numbers.js" type="module"></script>
+    <script src="./js/04-strings.js" type="module"></script>
+    <script src="./js/05-logic.js" type="module"></script>
+    <script src="./js/06-branching.js" type="module"></script>  -->
 </body>
 
 </html>
