--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     
-    <script src="./js/script.js"></script> 
+    <!-- <script src="./js/script.js"></script>  -->
     <script src="./js/01-vars.js" type="module"></script>
     <script src="./js/02-input.js" type="module"></script> 
     <script src="./js/03-numbers.js" type="module"></script> 
