--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 
     
     <!-- <script src="./js/script.js"></script>  -->
-    <script src="./js/01-vars.js" type="module"></script>
-    <script src="./js/02-input.js" type="module"></script> 
-    <script src="./js/03-numbers.js" type="module"></script> 
-    <script src="./js/04-strings.js" type="module"></script>
-    <script src="./js/05-logic.js" type="module"></script>
-    <script src="./js/06-branching.js" type="module"></script> 
+    <script src="./js/module-01/01-switch.js" type="module"></script>
+    <script src="./js/module-01/01-vars.js" type="module"></script> 
+    <script src="./js/module-01/02-input.js" type="module"></script> 
+    <script src="./js/module-01/02-loops.js" type="module"></script>
+    <script src="./js/module-01/03-input.js" type="module"></script>
+    <script src="./js/module-01/03-numbers.js" type="module"></script> 
+     <script src="./js/module-01/04-strings.js" type="module"></script> 
+    <script src="./js/module-01/05-logic.js" type="module"></script> 
+    <script src="./js/module-01/06-branching.js" type="module"></script>
 </body>
 
 </html>
