--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 
 <body>
 
+<!-- модуль два/1 -->
+    <!-- <label>
+        <input type="number" class="form-control js-value" />
+    </label>
+    <button type="button" class="btn btn-primary js-add-value">
+        Добавить в массив
+    </button>
+    <button type="button" class="btn btn-success js-calculate">
+        Посчитать сумму
+    </button> -->
+
     
     <!-- <script src="./js/script.js"></script>  -->
-    <script src="./js/module-01/01-switch.js" type="module"></script>
+    <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
     <script src="./js/module-01/01-vars.js" type="module"></script> 
     <script src="./js/module-01/02-input.js" type="module"></script> 
     <script src="./js/module-01/02-loops.js" type="module"></script>
@@ -21,6 +32,21 @@
      <script src="./js/module-01/04-strings.js" type="module"></script> 
     <script src="./js/module-01/05-logic.js" type="module"></script> 
     <script src="./js/module-01/06-branching.js" type="module"></script>
+     <script src="./js/module-02/01-basics.js" type="module"></script>  -->
+
+    <!-- <script src="./js/module-02/02-reference.js" type="module"></script> -->
+    <!-- <script src="./js/module-02/03-push.js" type="module"></script> -->
+    <!-- <script src="./js/module-02/04-split-join.js" type="module"></script> -->
+    <!-- <script src="./js/module-02/05-includes.js" type="module"></script> -->
+    <!-- <script src="./js/module-02/06-slice-splice.js" type="module"></script> -->
+    <!-- <script src="./js/module-02/07-concat.js" type="module"></script> -->
+
+    <script src="./js/module-03/01-basics.js" type="module"></script> 
+    <script src="./js/module-03/02-iteration.js" type="module"></script>
+    <script src="./js/module-03/03-slugify.js" type="module"></script> 
+    <script src="./js/module-03/04-search.js" type="module"></script> 
+    <script src="./js/module-03/05-cards.js" type="module"></script>
+   <script src="./js/module-03/06-arguments.js" type="module"></script>
 </body>
 
 </html>
