--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         Посчитать сумму
     </button> -->
 
+<!-- модуль0303 -->
+        <!-- <button class="js-show-cart">Показать содержимое корзины</button>
+        <button data-product="🍎">Добавить 🍎</button> -->
+
     
     <!-- <script src="./js/script.js"></script>  -->
     <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
@@ -41,12 +45,21 @@
     <!-- <script src="./js/module-02/06-slice-splice.js" type="module"></script> -->
     <!-- <script src="./js/module-02/07-concat.js" type="module"></script> -->
 
-    <script src="./js/module-03/01-basics.js" type="module"></script> 
+    <!-- <script src="./js/module-03/01-basics.js" type="module"></script> 
     <script src="./js/module-03/02-iteration.js" type="module"></script>
     <script src="./js/module-03/03-slugify.js" type="module"></script> 
     <script src="./js/module-03/04-search.js" type="module"></script> 
-    <script src="./js/module-03/05-cards.js" type="module"></script>
-   <script src="./js/module-03/06-arguments.js" type="module"></script>
+    <script src="./js/module-03/05-cards.js" type="module"></script> -->
+   <!-- <script src="./js/module-03/06-arguments.js" type="module"></script> -->
+
+    <!-- <script src="./js/module0303/01-basics.js" type="module"></script> -->
+    <!-- <script src="./js/module0303/02-friends.js" type="module"></script> -->
+    <!-- <script src="./js/module0303/03-cart.js" type="module"></script>
+    <script src="./js/module0303/view.js" type="module"></script> -->
+
+        <!-- <script src="./js/module0303/01-spread-rest.js" type="module"></script> -->
+        <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
+        <!-- <script src="./js/module0303/03-example.js" type="module"></script> -->
 </body>
 
 </html>
