--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <script src="./js/module-03/05-cards.js" type="module"></script> -->
    <!-- <script src="./js/module-03/06-arguments.js" type="module"></script> -->
 
-    <!-- <script src="./js/module0303/01-basics.js" type="module"></script> -->
-    <!-- <script src="./js/module0303/02-friends.js" type="module"></script> -->
-    <!-- <script src="./js/module0303/03-cart.js" type="module"></script>
-    <script src="./js/module0303/view.js" type="module"></script> -->
+     <!-- <script src="./js/module0303/01-basics.js" type="module"></script>   -->
+     <!-- <script src="./js/module0303/02-friends.js" type="module"></script>  -->
+     <!-- <script src="./js/module0303/03-cart.js" type="module"></script>  -->
+    <!-- <script src="./js/module0303/view.js" type="module"></script> --> 
 
         <!-- <script src="./js/module0303/01-spread-rest.js" type="module"></script> -->
         <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
