--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <!-- <script src="./js/module0303/01-spread-rest.js" type="module"></script> -->
         <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
         <!-- <script src="./js/module0303/03-example.js" type="module"></script> -->
+
+        <script src="./js/module-04/dz04.js" type="module"></script>
 </body>
 
 </html>
