--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
         <!-- <button class="js-show-cart">Показать содержимое корзины</button>
         <button data-product="🍎">Добавить 🍎</button> -->
 
+        <!-- модуль 05 -->
+        <!-- <h1>Важное!</h1>
+        <ul>
+            <li>Свойство объекта <code>__proto__</code></li>
+            <li>Свойство функции <code>prototype</code></li>
+        </ul>
+        <button class="js-add-method">Добавить метод на прототип</button> -->
+
+        <!-- модуль05 -->
+        <!-- <h1 class="js-title">Текст который написан в HTML-файле</h1> -->
+
     
+
     <!-- <script src="./js/script.js"></script>  -->
+
+<!-- <script src="./js/proba/proba.js" type="module"></script> -->
+
     <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
     <script src="./js/module-01/01-vars.js" type="module"></script> 
     <script src="./js/module-01/02-input.js" type="module"></script> 
@@ -61,7 +76,25 @@
         <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
         <!-- <script src="./js/module0303/03-example.js" type="module"></script> -->
 
-        <script src="./js/module-04/dz04.js" type="module"></script>
+        <!-- <script src="./js/module-04/dz04.js" type="module"></script> -->
+
+        <!-- <script src="./js/module-05/01-object-prototype.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/02-constructors.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/03-example.js" type="module"></script> -->
+
+        <!-- <script src="./js/module-05/00-prototypes.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/01-constructor.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/02-class.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/03-inheritance.js" type="module"></script> -->
+        <!-- <script src="./js/module-05/04-dom.js" type="module"></script> -->
+         <!-- <script src="./js/module-05/dz.js" type="module"></script>  -->
+
+             <!-- <script src="./js/strelki/01-syntax.js" type="module"></script>  -->
+            <!-- <script src="./js/strelki/02-context.js" type="module"></script> -->
+            <script src="./js/strelki/03-refactoring.js" type="module"></script>
+         
+            <!-- <script src="./js/youtube/one.js" type="module"></script>   -->
+
 </body>
 
 </html>
