--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
              <!-- <script src="./js/strelki/01-syntax.js" type="module"></script>  -->
             <!-- <script src="./js/strelki/02-context.js" type="module"></script> -->
-            <script src="./js/strelki/03-refactoring.js" type="module"></script>
+            <!-- <script src="./js/strelki/03-refactoring.js" type="module"></script> -->
          
-            <!-- <script src="./js/youtube/one.js" type="module"></script>   -->
+            <script src="./js/youtube/one.js" type="module"></script>  
 
 </body>
 
