--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript is awesome!</title>
-</head>
+  </head>
 
-<body>
-
-<!-- модуль два/1 -->
+  <body>
+    <!-- модуль два/1 -->
     <!-- <label>
         <input type="number" class="form-control js-value" />
     </label>
@@ -21,26 +19,24 @@
         Посчитать сумму
     </button> -->
 
-<!-- модуль0303 -->
-        <!-- <button class="js-show-cart">Показать содержимое корзины</button>
+    <!-- модуль0303 -->
+    <!-- <button class="js-show-cart">Показать содержимое корзины</button>
         <button data-product="🍎">Добавить 🍎</button> -->
 
-        <!-- модуль 05 -->
-        <!-- <h1>Важное!</h1>
+    <!-- модуль 05 -->
+    <!-- <h1>Важное!</h1>
         <ul>
             <li>Свойство объекта <code>__proto__</code></li>
             <li>Свойство функции <code>prototype</code></li>
         </ul>
         <button class="js-add-method">Добавить метод на прототип</button> -->
 
-        <!-- модуль05 -->
-        <!-- <h1 class="js-title">Текст который написан в HTML-файле</h1> -->
-
-    
+    <!-- модуль05 -->
+    <!-- <h1 class="js-title">Текст который написан в HTML-файле</h1> -->
 
     <!-- <script src="./js/script.js"></script>  -->
 
-<!-- <script src="./js/proba/proba.js" type="module"></script> -->
+    <script src="./js/proba/proba.js" type="module"></script>
 
     <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
     <script src="./js/module-01/01-vars.js" type="module"></script> 
@@ -65,36 +61,40 @@
     <script src="./js/module-03/03-slugify.js" type="module"></script> 
     <script src="./js/module-03/04-search.js" type="module"></script> 
     <script src="./js/module-03/05-cards.js" type="module"></script> -->
-   <!-- <script src="./js/module-03/06-arguments.js" type="module"></script> -->
+    <!-- <script src="./js/module-03/06-arguments.js" type="module"></script> -->
 
-     <!-- <script src="./js/module0303/01-basics.js" type="module"></script>   -->
-     <!-- <script src="./js/module0303/02-friends.js" type="module"></script>  -->
-     <!-- <script src="./js/module0303/03-cart.js" type="module"></script>  -->
-    <!-- <script src="./js/module0303/view.js" type="module"></script> --> 
+    <!-- <script src="./js/module0303/01-basics.js" type="module"></script>   -->
+    <!-- <script src="./js/module0303/02-friends.js" type="module"></script>  -->
+    <!-- <script src="./js/module0303/03-cart.js" type="module"></script>  -->
+    <!-- <script src="./js/module0303/view.js" type="module"></script> -->
 
-        <!-- <script src="./js/module0303/01-spread-rest.js" type="module"></script> -->
-        <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
-        <!-- <script src="./js/module0303/03-example.js" type="module"></script> -->
+    <!-- <script src="./js/module0303/01-spread-rest.js" type="module"></script> -->
+    <!-- <script src="./js/module0303/02-destructuring.js" type="module"></script> -->
+    <!-- <script src="./js/module0303/03-example.js" type="module"></script> -->
 
-        <!-- <script src="./js/module-04/dz04.js" type="module"></script> -->
+    <!-- <script src="./js/module-04/dz04.js" type="module"></script> -->
 
-        <!-- <script src="./js/module-05/01-object-prototype.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/02-constructors.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/03-example.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/01-object-prototype.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/02-constructors.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/03-example.js" type="module"></script> -->
 
-        <!-- <script src="./js/module-05/00-prototypes.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/01-constructor.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/02-class.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/03-inheritance.js" type="module"></script> -->
-        <!-- <script src="./js/module-05/04-dom.js" type="module"></script> -->
-         <!-- <script src="./js/module-05/dz.js" type="module"></script>  -->
+    <!-- <script src="./js/module-05/00-prototypes.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/01-constructor.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/02-class.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/03-inheritance.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/04-dom.js" type="module"></script> -->
+    <!-- <script src="./js/module-05/dz.js" type="module"></script>  -->
 
-             <!-- <script src="./js/strelki/01-syntax.js" type="module"></script>  -->
-            <!-- <script src="./js/strelki/02-context.js" type="module"></script> -->
-            <!-- <script src="./js/strelki/03-refactoring.js" type="module"></script> -->
-         
-            <script src="./js/youtube/one.js" type="module"></script>  
+    <!-- <script src="./js/strelki/01-syntax.js" type="module"></script>  -->
+    <!-- <script src="./js/strelki/02-context.js" type="module"></script> -->
+    <!-- <script src="./js/strelki/03-refactoring.js" type="module"></script> -->
 
-</body>
-
+    <!-- <script src="./js/youtube/one.js" type="module"></script>   -->
+<!--===============================================6 модуль========================================= -->
+    <!-- <script src="./js/module-06/00-foreach.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/01-map.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/02-filter.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/03-find.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/04-every-some.js" type="module"></script> -->
+  </body>
 </html>
