--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- <script src="./js/script.js"></script>  -->
 
-    <script src="./js/proba/proba.js" type="module"></script>
+    <!-- <script src="./js/proba/proba.js" type="module"></script> -->
 
     <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
     <script src="./js/module-01/01-vars.js" type="module"></script> 
@@ -85,16 +85,22 @@
     <!-- <script src="./js/module-05/04-dom.js" type="module"></script> -->
     <!-- <script src="./js/module-05/dz.js" type="module"></script>  -->
 
+<!-- =======================стрелочные функции ======================================================-->
+
     <!-- <script src="./js/strelki/01-syntax.js" type="module"></script>  -->
     <!-- <script src="./js/strelki/02-context.js" type="module"></script> -->
     <!-- <script src="./js/strelki/03-refactoring.js" type="module"></script> -->
-
+<!--============================================== youtube ==========================================-->
     <!-- <script src="./js/youtube/one.js" type="module"></script>   -->
 <!--===============================================6 модуль========================================= -->
     <!-- <script src="./js/module-06/00-foreach.js" type="module"></script> -->
     <!-- <script src="./js/module-06/01-map.js" type="module"></script> -->
-    <!-- <script src="./js/module-06/02-filter.js" type="module"></script> -->
+    <script src="./js/module-06/02-filter.js" type="module"></script>
     <!-- <script src="./js/module-06/03-find.js" type="module"></script> -->
     <!-- <script src="./js/module-06/04-every-some.js" type="module"></script> -->
+
+    <!-- <script src="./js/module-06/01-reduce.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/02-sort.js" type="module"></script> -->
+    <!-- <script src="./js/module-06/03-chaining.js" type="module"></script> -->
   </body>
 </html>
