--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
     <!-- <script src="./js/proba/proba.js" type="module"></script> -->
 
-    <!-- <script src="./js/module-01/01-switch.js" type="module"></script>
-    <script src="./js/module-01/01-vars.js" type="module"></script> 
+     <script src="./js/module-01/01-switch.js" type="module"></script>
+   <!-- <script src="./js/module-01/01-vars.js" type="module"></script> 
     <script src="./js/module-01/02-input.js" type="module"></script> 
     <script src="./js/module-01/02-loops.js" type="module"></script>
     <script src="./js/module-01/03-input.js" type="module"></script>
